[project]
name = "gunicorn-prometheus-exporter"
version = "0.2.0"
description = "A Gunicorn worker plugin that exports Prometheus metrics"
readme = "README.md"
authors = [
    {name = "Prince Roshan", email = "princekrroshan01@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "prometheus-client>=0.17.0",
    "psutil>=5.9.0",
    "gunicorn>=21.2.0",
]

[project.urls]
Homepage = "https://github.com/princekrroshan01/gunicorn-prometheus-exporter"
Documentation = "https://github.com/princekrroshan01/gunicorn-prometheus-exporter#readme"
Repository = "https://github.com/princekrroshan01/gunicorn-prometheus-exporter.git"
Issues = "https://github.com/princekrroshan01/gunicorn-prometheus-exporter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]
gevent = ["gevent>=23.7.0"]
eventlet = ["eventlet>=0.33.3"]
tornado = ["tornado>=6.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["gunicorn_prometheus_exporter*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --maxfail=5 --disable-warnings"

[tool.hatch.build.targets.wheel]
packages = ["src/gunicorn_prometheus_exporter"]